pass executor into thenAcceptAsync